# Simple_Shape_Drawer

./: .gitignore  CMakeLists.txt  askMo3ida.txt  fix_shapes.py  main.cpp
algorithms/: clipping_algorithm.h  drawing_algorithm.h  filling_algorithm.h
algorithms/Circle/: Circle_Polar_drawing_algorithm.cpp  Circle_Polar_drawing_algorithm.h  Circle_iterativePolar_drawing_algorithm.cpp  Circle_iterativePolar_drawing_algorithm.h  circle_direct_drawing_algorithm.h  circle_iterative_polar_drawing_algorithm.cpp  circle_midpoint_drawing_algorithm.cpp  circle_midpoint_drawing_algorithm.h  circle_midpoint_fast_drawing_algorithm.cpp  circle_midpoint_fast_drawing_algorithm.h
algorithms/Filling/: IterFloodFill_filling_algorithm.cpp  IterFloodFill_filling_algorithm.h
algorithms/clipping/circle/: circle_line_clipping_algorithm.cpp  circle_line_clipping_algorithm.h  circle_point_clipping_algorithm.cpp  circle_point_clipping_algorithm.h
algorithms/clipping/rectangle/: rectangle_line_clipping_algorithm.cpp  rectangle_line_clipping_algorithm.h  rectangle_point_clipping_algorithm.cpp  rectangle_point_clipping_algorithm.h  rectangle_polygon_clipping_algorithm.cpp  rectangle_polygon_clipping_algorithm.h
algorithms/clipping/square/: square_line_clipping_algorithm.cpp  square_line_clipping_algorithm.h  square_point_clipping_algorithm.cpp  square_point_clipping_algorithm.h
algorithms/curve/: curve_spline_drawing_algorithm.cpp  curve_spline_drawing_algorithm.h
algorithms/drawing/circle/: circle_direct_drawing_algorithm.cpp  circle_direct_drawing_algorithm.h  circle_iterative_polar_drawing_algorithm.cpp  circle_iterative_polar_drawing_algorithm.h  circle_midpoint_drawing_algorithm.cpp  circle_midpoint_drawing_algorithm.h  circle_midpoint_fast_drawing_algorithm.cpp  circle_midpoint_fast_drawing_algorithm.h  circle_polar_drawing_algorithm.cpp  circle_polar_drawing_algorithm.h
algorithms/drawing/curve/: curve_spline_drawing_algorithm.cpp  curve_spline_drawing_algorithm.h
algorithms/drawing/ellipse/: ellipse_Polar_drawing_algorithm.cpp  ellipse_Polar_drawing_algorithm.h  ellipse_direct_drawing_algorithm.cpp  ellipse_direct_drawing_algorithm.h  ellipse_midpoint_drawing_algorithm.cpp  ellipse_midpoint_drawing_algorithm.h
algorithms/drawing/line/: line_dda_drawing_algorithm.cpp  line_dda_drawing_algorithm.h  line_midpoint_drawing_algorithm.cpp  line_midpoint_drawing_algorithm.h  line_parametric_drawing_algorithm.cpp  line_parametric_drawing_algorithm.h
algorithms/drawing/polygon/: polygon_drawing_algorithm.cpp  polygon_drawing_algorithm.h
algorithms/drawing/rectangle/: rectangle_drawing_algorithm.cpp  rectangle_drawing_algorithm.h
algorithms/drawing/smile_face/: happy_smile_face_drawing_algorithm.cpp  happy_smile_face_drawing_algorithm.h  sad_smile_face_drawing_algorithm.cpp  sad_smile_face_drawing_algorithm.h
algorithms/drawing/square/: square_drawing_algorithm.cpp  square_drawing_algorithm.h
algorithms/ellipse/: ellipse_Polar_drawing_algorithm.h  ellipse_direct_drawing_algorithm.cpp  ellipse_direct_drawing_algorithm.h  ellipse_midpoint_drawing_algorithm.cpp  ellipse_midpoint_drawing_algorithm.h
algorithms/filling/: flood_fill_filling_algorithm.h  iterive_flood_fill_filling_algorithm.cpp  quarter_circle_with_line_filling_algorithm.cpp  quarter_circle_with_line_filling_algorithm.h
algorithms/filling/circle/: circle_quarter_with_circle_filling_algorithm.cpp  circle_quarter_with_circle_filling_algorithm.h  circle_quarter_with_line_filling_algorithm.cpp  circle_quarter_with_line_filling_algorithm.h  quarter_circle_with_circle_filling_algorithm.cpp  quarter_circle_with_circle_filling_algorithm.h  quarter_circle_with_line_filling_algorithm.h
algorithms/filling/curve/: fill_with_curve_filling_algorithm.cpp  fill_with_curve_filling_algorithm.h
algorithms/filling/floodfill/: flood_fill_filling_algorithm.cpp  flood_fill_filling_algorithm.h  iterive_flood_fill_filling_algorithm.cpp  iterive_flood_fill_filling_algorithm.h
algorithms/filling/linescan/: convex_filling_algorithm.cpp  convex_filling_algorithm.h  non_convex_filling_algorithm.cpp  non_convex_filling_algorithm.h
algorithms/line/: line_dda_drawing_algorithm.cpp  line_dda_drawing_algorithm.h  line_midpoint_drawing_algorithm.cpp  line_midpoint_drawing_algorithm.h  line_parametric_drawing_algorithm.h
algorithms/rectangle/: rectangle_drawing_algorithm.cpp  rectangle_drawing_algorithm.h
app/: app_manager.cpp  app_manager.h
core/: point.cpp  point.h  shape.cpp  shape.h
core/shapes/: circle.cpp  circle.h  curve.cpp  curve.h  ellipse.cpp  ellipse.h  happy_smile_face.cpp  happy_smile_face.h  line.cpp  line.h  polygon.h  rectangle.cpp  rectangle.h  sad_smile_face.cpp  sad_smile_face.h  square.cpp  square.h
io/: action.h  file_manager.cpp  file_manager.h  input_reader.cpp  input_reader.h  menu_handler.old
rendering/: menu_creator.h  menu_handler.h  mouse_cursor_manager.cpp  mouse_cursor_manager.h  screen_writer.cpp  screen_writer.h
saves/: out.hsv
