cmake_minimum_required(VERSION 3.29)
project(Simple_Shape_Drawer)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--stack,1073741824")

add_executable(Simple_Shape_Drawer main.cpp
        core/point.h
        core/shape.h
        core/shape.cpp
        algorithms/filling_algorithm.h
        algorithms/drawing_algorithm.h
        io/file_manager.cpp
        io/file_manager.h
        rendering/screen_writer.cpp
        rendering/screen_writer.h
        rendering/menu_handler.h
        app/app_manager.cpp
        app/app_manager.h
        algorithms/clipping_algorithm.h
        algorithms/clipping_algorithm.h
        core/shapes/line.cpp
        core/shapes/line.h
        core/shapes/circle.cpp
        core/shapes/circle.h
        core/shapes/ellipse.cpp
        core/shapes/ellipse.h
        core/shapes/curve.cpp
        core/shapes/curve.h
        core/shapes/rectangle.cpp
        core/shapes/rectangle.h
        algorithms/drawing/circle/circle_iterative_polar_drawing_algorithm.cpp
        algorithms/drawing/circle/circle_iterative_polar_drawing_algorithm.h
        algorithms/drawing/circle/Circle_Polar_drawing_algorithm.cpp
        algorithms/drawing/circle/Circle_Polar_drawing_algorithm.h
        algorithms/drawing/line/line_dda_drawing_algorithm.cpp
        algorithms/drawing/line/line_dda_drawing_algorithm.h
        algorithms/drawing/line/line_parametric_drawing_algorithm.cpp
        algorithms/drawing/line/line_parametric_drawing_algorithm.h
        algorithms/drawing/line/line_midpoint_drawing_algorithm.cpp
        algorithms/drawing/line/line_midpoint_drawing_algorithm.h
        algorithms/filling/floodfill/iterive_flood_fill_filling_algorithm.cpp
        algorithms/filling/floodfill/iterive_flood_fill_filling_algorithm.h
        algorithms/clipping/circle/circle_line_clipping_algorithm.cpp
        algorithms/clipping/circle/circle_line_clipping_algorithm.h
        algorithms/clipping/circle/circle_point_clipping_algorithm.cpp
        algorithms/clipping/circle/circle_point_clipping_algorithm.h
        core/shapes/polygon.h
        algorithms/drawing/ellipse/ellipse_direct_drawing_algorithm.cpp
        algorithms/drawing/ellipse/ellipse_direct_drawing_algorithm.h
        algorithms/drawing/ellipse/ellipse_Polar_drawing_algorithm.cpp
        algorithms/drawing/ellipse/ellipse_Polar_drawing_algorithm.h
        algorithms/drawing/ellipse/ellipse_midpoint_drawing_algorithm.cpp
        algorithms/drawing/ellipse/ellipse_midpoint_drawing_algorithm.h
        algorithms/filling/floodfill/flood_fill_filling_algorithm.h
        algorithms/filling/floodfill/flood_fill_filling_algorithm.cpp
        algorithms/drawing/circle/circle_direct_drawing_algorithm.h
        algorithms/drawing/circle/circle_direct_drawing_algorithm.cpp
        algorithms/drawing/circle/circle_midpoint_drawing_algorithm.h
        algorithms/drawing/circle/circle_midpoint_drawing_algorithm.cpp
        algorithms/drawing/circle/circle_midpoint_fast_drawing_algorithm.h
        algorithms/drawing/circle/circle_midpoint_fast_drawing_algorithm.cpp
        algorithms/drawing/curve/curve_spline_drawing_algorithm.h
        algorithms/drawing/curve/curve_spline_drawing_algorithm.cpp
        io/action.h
        algorithms/clipping/rectangle/rectangle_point_clipping_algorithm.h
        algorithms/clipping/rectangle/rectangle_line_clipping_algorithm.h
        algorithms/clipping/rectangle/rectangle_polygon_clipping_algorithm.h
        algorithms/clipping/rectangle/rectangle_point_clipping_algorithm.cpp
        algorithms/clipping/rectangle/rectangle_line_clipping_algorithm.cpp
        algorithms/clipping/rectangle/rectangle_polygon_clipping_algorithm.cpp
        algorithms/drawing/rectangle/rectangle_drawing_algorithm.cpp
        algorithms/drawing/rectangle/rectangle_drawing_algorithm.h
        rendering/mouse_cursor_manager.cpp
        rendering/mouse_cursor_manager.h
        core/shapes/happy_smile_face.cpp
        core/shapes/happy_smile_face.h
        algorithms/drawing/smile_face/happy_smile_face_drawing_algorithm.cpp
        algorithms/drawing/smile_face/happy_smile_face_drawing_algorithm.h
        algorithms/drawing/smile_face/sad_smile_face_drawing_algorithm.cpp
        algorithms/drawing/smile_face/sad_smile_face_drawing_algorithm.h
        core/shapes/sad_smile_face.cpp
        core/shapes/sad_smile_face.h
        algorithms/drawing/polygon/polygon_drawing_algorithm.cpp
        algorithms/drawing/polygon/polygon_drawing_algorithm.h
        algorithms/clipping/square/square_line_clipping_algorithm.cpp
        algorithms/clipping/square/square_line_clipping_algorithm.h
        algorithms/clipping/square/square_point_clipping_algorithm.cpp
        algorithms/clipping/square/square_point_clipping_algorithm.h
        core/shapes/square.cpp
        core/shapes/square.h
        algorithms/drawing/square/square_drawing_algorithm.cpp
        algorithms/drawing/square/square_drawing_algorithm.h
        io/input_reader.cpp
        io/input_reader.h
        io/input_reader.cpp
        io/input_reader.h
        algorithms/filling/circle/quarter_circle_with_line_filling_algorithm.cpp
        algorithms/filling/circle/quarter_circle_with_circle_filling_algorithm.cpp
        algorithms/filling/circle/quarter_circle_with_circle_filling_algorithm.h
)